--- a/rate/rate_projeto/css/style.css
+++ b/rate/rate_projeto/css/style.css
@@ -46,6 +46,8 @@ body {
     align-items: center;
     width: 32px;
     height: 32px;
+    margin-top: 100%;
+    margin-bottom: -62%;
 }
 
 .ultimo_botao {
