--- a/rate/rate_projeto/css/add_ator.css
+++ b/rate/rate_projeto/css/add_ator.css
@@ -12,9 +12,18 @@ body {
     width: 100%;
     margin: 0;
 }
+#add{
+    padding: 3%;
+    margin: 2%;
+}
+
+#cancel{
+    padding: 14%;
+    
+}
 
 .cards {
-    margin-top: 0;
+    margin-top: 2%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -28,8 +37,9 @@ body {
     color: #fff;
     font-size: 35px;
     cursor: pointer;
-    margin-left: 3%;
-    margin-top: 1%;
+    position: absolute;
+    top: 20px;           
+    left: 20px; 
 }
 
 .back-button:hover {
