--- a/rate/rate_projeto/css/add_sugs_ator_ADM.css
+++ b/rate/rate_projeto/css/add_sugs_ator_ADM.css
@@ -14,7 +14,7 @@ body {
 }
 
 .cards {
-    margin-top: 0;
+    margin-top: -37%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -28,10 +28,10 @@ body {
     color: #fff;
     font-size: 35px;
     cursor: pointer;
-    margin-left: 3%;
-    margin-top: 1%;
+    position: absolute;
+    top: 20px;           /* Ajuste a distância do topo conforme necessário */
+    left: 20px; 
 }
-
 .back-button:hover {
     color: #ccc;
 }
