--- a/rate/rate_projeto/css/add_sugs_filme_ADM.css
+++ b/rate/rate_projeto/css/add_sugs_filme_ADM.css
@@ -14,7 +14,7 @@ body {
 }
 
 .cards {
-    margin-top: 0;
+    margin-top: -37%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -28,8 +28,9 @@ body {
     color: #fff;
     font-size: 35px;
     cursor: pointer;
-    margin-left: 3%;
-    margin-top: 1%;
+    position: absolute;
+    top: 20px;           /* Ajuste a distância do topo conforme necessário */
+    left: 20px; 
 }
 
 .back-button:hover {
@@ -187,10 +188,12 @@ button#cancel {
 
 #add{
     padding: 3%;
+    margin: 2%;
 }
 
 #cancel{
-    padding: 3%;
+    padding: 19.5%;
+    
 }
 
 #cancel:hover {
