--- a/rate/rate_projeto/css/sugs_ator.css
+++ b/rate/rate_projeto/css/sugs_ator.css
@@ -14,7 +14,7 @@ body {
 }
 
 .cards {
-    margin-top: 0;
+    margin-top: -37%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -28,8 +28,9 @@ body {
     color: #fff;
     font-size: 35px;
     cursor: pointer;
-    margin-left: 3%;
-    margin-top: 1%;
+    position: absolute;
+    top: 20px;           
+    left: 20px; 
 }
 
 .back-button:hover {
