--- a/rate/rate_projeto/css/perfil.css
+++ b/rate/rate_projeto/css/perfil.css
@@ -16,16 +16,41 @@ body {
     align-items: center !important;
     height: 100vh !important;
 }
+.card-cinza {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 15%;
+    height: 20%;
+    transform: translate(-50%, -50%);
+    background-color: #474747;
+    border: 1px solid #474747;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    z-index: 1000;
+    display: flex; 
+    justify-content: center; 
+    align-items: center; 
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+  
+  
 
 body .container {
     display: flex !important;
     flex-direction: column !important;
     background-color: #52057B !important;
-    border-radius: 10px !important;
+    border-radius: 15px !important;
     padding: 90px !important;
     width: 100% !important;
     max-width: 800px !important;
-    box-shadow: 0 0 60px rgba(0, 0, 0, 0.1) !important;
+    box-shadow: 0 0 60px rgba(0, 0, 0, 0.3) !important;
     position: relative !important;
 }
 
@@ -138,7 +163,7 @@ body .container {
 
 .back-button,
 .cont-button {
-    padding: 10px 20px !important;
+    padding: 10px 30px !important;
     border: none !important;
     border-radius: 20px !important;
     cursor: pointer !important;
