--- a/rate/rate_projeto/css/mod_sugs_filme.css
+++ b/rate/rate_projeto/css/mod_sugs_filme.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body {
+.cards body {
     font-family: Arial, sans-serif;
     background-color: #2C2C2C;
     color: white;
@@ -14,13 +14,12 @@ body {
 }
 
 .cards {
-    margin-top: -37%;
+    margin-top: -12%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
-
 
 .back-button {
     background-color: transparent;
@@ -29,32 +28,36 @@ body {
     font-size: 35px;
     cursor: pointer;
     position: absolute;
-    top: 20px;           
-    left: 20px; 
+    top: 20px;
+    left: 20px;
 }
 
 .back-button:hover {
     color: #ccc;
 }
 
-.container {
-    height: max-content;
-    width: 35%;
+
+
+body .container {
+    
+    background-color: #2C2C2C;
+    display: flex;
+    justify-content: center; 
+    align-items: center;     
+    height: 100vh;           
+    margin: 0;
     background-color: #3f3e3e;
     padding: 20px;
     border-radius: 15px;
+    height: max-content;
     margin-bottom: 40px;
-    margin-left: 32.5%;
-    margin-right: 32.5%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 90%; 
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-}
-
+    margin-top: 0; 
+  }
+  
 h2 {
     margin-bottom: 20px;
     letter-spacing: 1.5px;
@@ -62,7 +65,7 @@ h2 {
 
 .form-container {
     height: 90%;
-    width: 90%;
+    width: 90% ;
 }
 
 .ator-image {
@@ -95,9 +98,7 @@ input {
     color: white;
 }
 
-
 button {
-    /* padding: 10px 20px; */
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -109,7 +110,7 @@ button#cancel {
     background-color: #52057B;
 }
 
-.img_classificacao{
+.img_classificacao {
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
@@ -122,78 +123,32 @@ button#cancel {
     align-items: center;
 }
 
-.ícone1{
+.ícone1,
+.ícone2,
+.ícone3,
+.ícone4,
+.ícone5,
+.ícone6 {
     width: 90%;
     height: 90%;
     max-width: 30px;
     max-height: 30px;
     object-fit: cover;
     border-radius: 10px;
-
+    margin-left: 10px;
 }
 
-.ícone2{
-    width: 90%;
-    height: 90%;
-    margin-left: 10px;
-    max-width: 30px;
-    max-height: 30px;
-    object-fit: cover;
-    border-radius: 10px;
-} 
-
-.ícone3{
-    width: 90%;
-    height: 90%;
-    margin-left: 10px;
-    max-width: 30px;
-    max-height: 30px;
-    object-fit: cover;
-    border-radius: 10px;
-} 
-
-.ícone4{
-    width: 90%;
-    height: 90%;
-    margin-left: 10px;
-    max-width: 30px;
-    max-height: 30px;
-    object-fit: cover;
-    border-radius: 10px;
-} 
-
-.ícone5{
-    width: 90%;
-    height: 90%;
-    margin-left: 10px;
-    max-width: 30px;
-    max-height: 30px;
-    object-fit: cover;
-    border-radius: 10px;
-} 
-
-.ícone6{
-    width: 90%;
-    height: 90%;
-    margin-left: 10px;
-    max-width: 30px;
-    max-height: 30px;
-    object-fit: cover;
-    border-radius: 10px;
-} 
-
-.buto{
+.buto {
     background-color: #3f3e3e;
 }
 
-#add{
+#add {
     padding: 3%;
     margin: 2%;
 }
 
-#cancel{
+#cancel {
     padding: 19.5%;
-    
 }
 
 #cancel:hover {
