--- a/rate/rate/src/app/paginas/Perfil/perfil.css
+++ b/rate/rate/src/app/paginas/Perfil/perfil.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 
-html body {
+body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     background-color: #52057B;
