--- a/rate/rate/src/app/paginas/ModSugsFilm/mod_sugs_filme.css
+++ b/rate/rate/src/app/paginas/ModSugsFilm/mod_sugs_filme.css
@@ -11,10 +11,11 @@
     height: 100%;
     width: 100%;
     margin: 0;
+   
 }
 
 .cards {
-    margin-top: -12%;
+
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -38,7 +39,7 @@
 
 
 
-body .container {
+:root .container {
     
     background-color: #2C2C2C;
     display: flex;
@@ -55,7 +56,8 @@ body .container {
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-    margin-top: 0; 
+    
+  
   }
   
 h2 {
