--- a/rate/rate/src/app/paginas/PerfilComen/perfil_comen.css
+++ b/rate/rate/src/app/paginas/PerfilComen/perfil_comen.css
@@ -94,6 +94,7 @@ body {
     border-radius: 50%;
     width: 270px;
     height: 270px;
+    margin-right: 40px;
 }
 
 .right-container {
@@ -121,6 +122,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 18px;
     margin-bottom: 5px;
+    margin-left: 20%;
 }
 
 .input-text {
@@ -129,7 +131,7 @@ body {
     padding: 10px;
     border-radius: 5px;
     width: calc(100% - 30px); 
-    margin-right: 10px; 
+    margin-left: 20%; 
 }
 
 .edit-icon {
