--- a/rate/rate/src/app/paginas/PerfilAmg/perfil_amg.css
+++ b/rate/rate/src/app/paginas/PerfilAmg/perfil_amg.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 .cont-button {
     padding: 10px 30px;
     border: none;
@@ -13,6 +14,24 @@
     align-self: flex-end;
     margin-top: 20%;
     margin-left: 80%;
+}
+.rev{
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 50px;
+}
+
+.desamigo{
+    
+    font-size: 10px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 5px;
+    height: 35px;
+    width: 40px;
 }
 
 .outer-button {
@@ -30,8 +49,8 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    background-color: #52057B; 
-    color: #D9D9D9; 
+    background-color: #52057B;
+    color: #D9D9D9;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,24 +61,25 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #52057B;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 90px;
     width: 800px;
-    box-shadow: 0 0 70px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    box-shadow: 0 0 60px rgba(0, 0, 0, 0.3);
     position: relative;
-    
+
 }
 
 
 @media (max-width: 800px) {
     .container {
-        width: 95%; 
-        padding: 40px; 
+        width: 95%;
+        padding: 40px;
     }
 
     .content {
-        flex-direction: column; 
-        margin-top: 10px; 
+        flex-direction: column;
+        margin-top: 10px;
     }
 
     .left-container,
@@ -68,18 +88,19 @@ body {
     }
 
     .profile-picture img {
-        width: 120px; 
-        height: 120px; 
+        width: 120px;
+        height: 120px;
     }
 
     .input-text {
-        width: 100%; 
-        margin-right: 0; 
+        width: 100%;
+        margin-right: 0;
     }
 
-    .back-button, .comment-button {
-        width: 100%; 
-        margin-top: 10px; 
+    .back-button,
+    .comment-button {
+        width: 100%;
+        margin-top: 10px;
     }
 }
 
@@ -109,7 +130,7 @@ body {
 }
 
 .profile-picture img {
-    background-color: #6C6060; 
+    background-color: #6C6060;
     border-radius: 50%;
     width: 270px;
     height: 270px;
@@ -149,13 +170,13 @@ body {
     color: #000;
     padding: 10px;
     border-radius: 5px;
-    width: calc(100% - 30px); 
-    margin-right: 10px; 
+    width: calc(100% - 30px);
+    margin-right: 10px;
 }
 
 .edit-icon {
     position: absolute;
-    right: -30px; 
+    right: -30px;
     top: 50%;
     transform: translateY(-50%);
     width: 20px;
@@ -189,10 +210,12 @@ body {
     background-color: #737373;
     align-self: flex-start;
 }
-.apelido{
-    margin-right: 50px; 
+
+.apelido {
+    margin-right: 50px;
 }
-.Bio{
+
+.Bio {
     margin-left: 20%;
 }
 
