--- a/rate/rate/src/app/paginas/PerfilComen/perfil_comen.css
+++ b/rate/rate/src/app/paginas/PerfilComen/perfil_comen.css
@@ -9,7 +9,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    background-color: #52057B; 
+    background-color: #52057B;
     color: #D9D9D9;
     display: flex;
     justify-content: center;
@@ -22,37 +22,38 @@ body {
     display: flex;
     flex-direction: column;
     background-color: #52057B;
-    border-radius: 10px;
+    border-radius: 15px;
     padding: 90px;
     width: 800px;
-    box-shadow: 0 0 70px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    box-shadow: 0 0 60px rgba(0, 0, 0, 0.3);
     position: relative;
 }
 
 @media (max-width: 800px) {
     .container {
-        width: 95%; 
-        padding: 40px; 
+        width: 95%;
+        padding: 40px;
     }
 
     .content {
-        flex-direction: column; 
-        margin-top: 10px; 
+        flex-direction: column;
+        margin-top: 10px;
     }
 
     .left-container,
     .right-container {
-        width: 100%; 
+        width: 100%;
     }
 
     .profile-picture img {
-        width: 200px; 
-        height: 200px; 
+        width: 200px;
+        height: 200px;
     }
 
     .input-text {
-        width: 100%; 
-        margin-right: 0; 
+        width: 100%;
+        margin-right: 0;
     }
 }
 
@@ -65,8 +66,8 @@ body {
     font-size: 20px;
     cursor: pointer;
     position: absolute;
-    top: 20px;           
-    right: 65px ;
+    top: 20px;
+    right: 65px;
 }
 
 .top-icon {
@@ -74,7 +75,7 @@ body {
     height: 34px;
     cursor: pointer;
     padding: 50px;
-    right: 65px ;
+    right: 65px;
 }
 
 .content {
@@ -90,7 +91,7 @@ body {
 }
 
 .profile-picture img {
-    background-color: #6C6060; 
+    background-color: #6C6060;
     border-radius: 50%;
     width: 270px;
     height: 270px;
@@ -103,6 +104,24 @@ body {
     justify-content: space-between;
     width: 60%;
     padding-left: 20px;
+}
+.rev{
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 50px;
+}
+
+.desamigo{
+    
+    font-size: 10px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 5px;
+    height: 35px;
+    width: 40px;
 }
 
 .info-container {
@@ -130,13 +149,13 @@ body {
     color: #000;
     padding: 10px;
     border-radius: 5px;
-    width: calc(100% - 30px); 
-    margin-left: 20%; 
+    width: calc(100% - 30px);
+    margin-left: 20%;
 }
 
 .edit-icon {
     position: absolute;
-    right: -30px; 
+    right: -30px;
     top: 50%;
     transform: translateY(-50%);
     width: 20px;
@@ -148,10 +167,10 @@ body {
     padding: 10px 20px;
     border: none;
     border-radius: 20px;
-    background-color: #6C6060; 
+    background-color: #6C6060;
     color: #fff;
     cursor: pointer;
-    align-self: flex-end; 
+    align-self: flex-end;
     margin-top: 20px;
     transition: all 0.3s ease-in-out;
 }
