--- a/rate/rate/src/app/paginas/AdcFilme/adc_filme.css
+++ b/rate/rate/src/app/paginas/AdcFilme/adc_filme.css
@@ -4,40 +4,23 @@
     box-sizing: border-box;
 }
 
-/* body {
+.cards body {
     font-family: Arial, sans-serif;
     background-color: #2C2C2C;
     color: white;
     height: 100%;
     width: 100%;
     margin: 0;
-} */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #2C2C2C;
-    color: white;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-}
-#add{
-    padding: 4%;
-    margin: 2%;
-}
-
-#cance{
-    padding: 14%;
-    
+   
 }
 
 .cards {
-    margin-top: 2%;
+
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
-
 
 .back-button {
     background-color: transparent;
@@ -46,48 +29,52 @@ body {
     font-size: 35px;
     cursor: pointer;
     position: absolute;
-    top: 20px;           
-    left: 20px; 
+    top: 20px;
+    left: 20px;
 }
 
 .back-button:hover {
     color: #ccc;
 }
 
-.container {
-    margin-top: 20%;  
-    background-color: #3f3e3e; 
+
+
+:root .container {
+    
+    background-color: #2C2C2C;
     display: flex;
     justify-content: center; 
     align-items: center;     
-    height: max-content; 
+    height: 100vh;           
+    margin: 0;
+    background-color: #3f3e3e;
     padding: 20px;
     border-radius: 15px;
+    height: max-content;
     margin-bottom: 40px;
     width: 90%; 
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-}
-div.container[class="container"] {
-    margin-top: 20% ;
-}
-
-
+    
+  
+  }
+  
 h2 {
     margin-bottom: 20px;
     letter-spacing: 1.5px;
 }
 
 .form-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    height: 90%;
+    width: 90% ;
 }
 
 .ator-image {
-    width: 150px;
-    height: 200px;
+    width: 90%;
+    height: 90%;
+    max-width: 250px;
+    max-height: 310px;
     object-fit: cover;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -113,17 +100,7 @@ input {
     color: white;
 }
 
-.button-group {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin: 5%;
-}
-
 button {
-    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -135,11 +112,45 @@ button#cancel {
     background-color: #52057B;
 }
 
-.img{
-    height: 5%;
-    width: 2%;
-    margin-left: -95%;
-    margin-top: -44%;
+.img_classificacao {
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.ícone1,
+.ícone2,
+.ícone3,
+.ícone4,
+.ícone5,
+.ícone6 {
+    width: 90%;
+    height: 90%;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.buto {
+    background-color: #3f3e3e;
+}
+
+#add {
+    padding: 3%;
+    margin: 2%;
+}
+
+#cancel {
+    padding: 19.5%;
 }
 
 #cancel:hover {
@@ -150,14 +161,19 @@ button#cancel {
     background-color: #7e198f;
 }
 
+.button-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 5%;
+}
+
 .form-container input[type="text"] {
     outline: 0;
 }
 
 .form-container input[type="date"] {
-    outline: 0;
-}
-
-.form-container input[type="number"] {
     outline: 0;
 }
