--- a/rate/rate/src/app/paginas/AdcGenero/add_gen.css
+++ b/rate/rate/src/app/paginas/AdcGenero/add_gen.css
@@ -107,12 +107,21 @@ button {
     background-color: #52057B;
     color: white;
 }
+#add{
+    padding: 3%;
+    margin: 2%;
+}
+
+#canc{
+    padding: 3.5%;
+    
+}
 
 button#cancel {
     background-color: #52057B;
 }
 
-#cancel:hover {
+#cance:hover {
     background-color: #7e198f;
 }
 
