--- a/rate/rate/src/app/paginas/Amigos/amigos.css
+++ b/rate/rate/src/app/paginas/Amigos/amigos.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -7,6 +9,8 @@
 body {
     background-color: #474747;
 }
+
+
 
 /* Barra lateral */
 .lateral_bar {
@@ -164,7 +168,7 @@ body {
 
 
 /* Blocos */
-.blocos_filmes {
+.blocos_amgs {
     padding-top: 122px;
     padding-left: 10%;
     padding-right: 5%;
@@ -172,150 +176,149 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 3vh ;
+    gap: 5vh ;
 }
 
-.seta_voltar {
-    width: 50%;
-    margin-top: -2%;
-    margin-left: -2%;
-}
-
-.back-button {
-    background-color: transparent;
-    border: none;
-    color: #fff;
-    font-size: 24px;
-    cursor: pointer;
-}
-
-.back-button:hover {
-    color: #ccc;
-}
-
-.movie-details {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    color: white;
-}
-
-.parte1{
-    width: 27.5%;
+.info_comen {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    gap: 30px;
+    gap: 3vh;
 }
 
-.parte2{
-    width: 27.5%;
-    justify-content: center;
-    align-content: center;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+.comen_pes {
+    color: #FFF;
+    font-family: "Montserrat", sans-serif;
 }
 
-.parte3{
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: end;
-}
-
-.movie-name {
-    margin-left: 5px;
-    font-size: 28px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    margin-bottom: 15px;
-}
-
-.poster-frame {
-    width: 20vw;
-    height: 60vh;
-    background-color: #5c5c5c;
-    border-radius: 10px;
-    box-shadow: 0 8px 16px rgba(0,0,0,0.4);
-}
-
-.nam{
-    padding-bottom: 10px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+.comen_pes h1 {
     font-size: 18px;
 }
 
-.livre {
-    margin-top: 20px;
-    width: 40px;
-    height: 40px;
-    object-fit: cover;
-    border-radius: 10px;
+.comen_amigos {
+    color: #FFF;
+    font-family: "Montserrat", sans-serif;
+    margin-top: 5vh;
 }
 
-.user-card {
+.comen_amigos h1 {
+    font-size: 18px;
+}
+
+.card_blo{
+    width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
-    background-color: #A8A8A8; 
-    padding: 15px ;
-    width: max-content;
-    border-radius: 25px; 
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.profile-icon {
-    width: 50px;
-    height: 50px;
-    background-color: #52057b; 
-    color: white; 
-    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    border-radius: 50%; 
-    font-size: 20px;
-    margin-right: 10px; 
+    gap: 5vh;
 }
 
-.username {
-    font-size: 16px;
-    font-weight: bold;
-    color: black; 
+.bloco {
+    background-color: #A8A8A8;
+    /* width: 9vw;
+    height: 28vh; */
+    height: 150px;
+    width: 300px;
+    border-radius: 15px;
+    box-shadow: 0 8px 16px rgba(0,0,0,0.4);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .perfil {
-    width: 25px;
-    height: 25px;
+    height: 80px;
+    width: 80px;
 }
 
-.avaliacao {
-    display: flex; 
-    gap: 10px; 
-    margin-left:18% ;
-    margin-top: -10px; 
-} 
+.bloco_in {
+    background-color: #A8A8A8;
+    width: 230px;
+    height: 120px;
+    padding: 10px;
+    
+   
+}
+.just{
+    color: #000000;
+    margin-top: 2%;
+    margin-left: 10%;
+    font-family: "Archivo Black", sans-serif;
+    font-weight: 200;
+    font-size: 15px;
+}
 
-button {
-    font-size: 35px;
-    color: white;
-    background-color: #474747;
+.vizu_amg{
+    margin-top: 3%;
+    border-radius: 6%;
+    margin: 2%;
+    width: 80%;
+    height: 25px;
+    color: #FFF;
+    font-size: 14px;
+    padding: 2%;
+
+}
+.rem_amg{
+    border-radius: 6%;
+    margin: 2%;
+    width: 80%;
+    height: 25px;
+    color: #FFF;
+    font-size: 14px;
+    padding: 2%;
+}
+
+p {
+    color: #FFF;
+    font-family: "Montserrat", sans-serif;
+    font-size: 15px;
+}
+
+.card_button {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 4%;                                                                                                                                                                                                                                                                     
+}
+
+#btn_modificar {
+    background-color: #737373;
+    width: 90px;
+    padding: 12px;
+    border-radius: 15px ;
+    color: rgb(253, 253, 253);
+    text-align: center;
+    font-size: 15px; 
+    border: 0;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
     cursor: pointer;
 }
 
-.likes {
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 25;
+#btn_modificar:hover {
+    background-color: #959595;
+}
+
+#btn_remover {
+    background-color: #B60B0D;
+    width: 85px;
+    padding: 12px;
+    border-radius: 15px ;
+    color: rgb(253, 253, 253);
+    text-align: center;
+    font-size: 15px; 
+    border: 0;
+    font-family: "Inter", sans-serif;
+    font-style: normal;
+    cursor: pointer;
+    margin-left: 3%;
+}
+
+#btn_remover:hover {
+    background-color: #df1013;
 }
 
 /* Estilo do botão de menu */
@@ -376,7 +379,7 @@ button {
     }
 }
 
-/* All Mobile Sizes (devices and browser) */
+
 @media only screen and (max-width: 767px) {
     .rate{
         font-size: 26px;
@@ -461,4 +464,3 @@ button {
         height: 25px;
     }
 }
-
