--- a/rate/rate/src/app/paginas/ClassificacaoAtorADM/class_ator_ADM.css
+++ b/rate/rate/src/app/paginas/ClassificacaoAtorADM/class_ator_ADM.css
@@ -181,6 +181,7 @@
 .mod_button{
     background-color: #737373;
     padding: 10px;
+    font-size: 85%;
     border-radius: 15px;
     margin-left: 40%;
     border: none;
