--- a/rate/rate/src/app/paginas/VizuMinSugs/vizu_min_sug.css
+++ b/rate/rate/src/app/paginas/VizuMinSugs/vizu_min_sug.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:wght@253&family=Nerko+One&family=Protest+Guerrilla&display=swap');
-
 * {
     padding: 0;
     margin: 0;
@@ -9,8 +7,6 @@
 body {
     background-color: #474747;
 }
-
-
 
 /* Barra lateral */
 .lateral_bar {
@@ -168,7 +164,7 @@ body {
 
 
 /* Blocos */
-.blocos_amigos {
+.blocos_filmes {
     padding-top: 122px;
     padding-left: 10%;
     padding-right: 5%;
@@ -176,92 +172,169 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 5vh ;
+    gap: 3vh ;
 }
 
-.amigos_tit {
-    color: #FFF;
-    font-family: "Montserrat", sans-serif;
+.seta_voltar {
+    width: 50%;
+    margin-top: -2%;
+    margin-left: -2%;
 }
 
-.h1_amigos {
-    font-size: 18px;
+.bac-button {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    font-size: 34px;
+    cursor: pointer;
+    margin-left: -150%;
+    margin-top: 0;
+
 }
 
-.card_blocos{
-    width: 100%;
+.bac-button:hover {
+    color: #ccc;
+}
+
+.movie-details {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 5vh;
+    justify-content: space-between;
+    color: white;
 }
 
-.blocos {
-    background-color: #A8A8A8;
-    /* width: 9vw;
-    height: 28vh; */
-    height: 150px;
-    width: 300px;
-    border-radius: 15px;
+.parte1{
+    width: 27.5%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    gap: 30px;
+}
+
+.parte2{
+    width: 27.5%;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 5%;
+    margin-left: -80%;
+}
+
+.parte3{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.movi-name {
+    margin-left: -90%;
+    font-size: 28px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    margin-bottom: 15px;
+
+}
+
+.postera-frame {
+    width: 20vw;
+    height: 60vh;
+    background-color: #5c5c5c;
+    border-radius: 10px;
+    margin-left: -90%;
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
+}
+
+.nam{
+    padding-bottom: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+   
+}
+
+.livre {
+    margin-top: 20px;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.use-card {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
+    background-color: #A8A8A8; 
+    padding: 15px ;
+    width: max-content;
+    border-radius: 25px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 180%;
+}
+
+.profile-icon {
+    width: 50px;
+    height: 50px;
+    background-color: #52057b; 
+    color: white; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%; 
+    font-size: 20px;
+    margin-right: 10px; 
+}
+
+.k{
+    font-size: 180%;
+    margin-left: 150%;
+   
+}
+.nk{
+    font-size: 180%;
+    
+}
+
+.username {
+    font-size: 16px;
+    font-weight: bold;
+    color: black; 
 }
 
 .perfil {
-    height: 80px;
-    width: 80px;
+    width: 25px;
+    height: 25px;
 }
 
-.text {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 3vh;
-}
+.avaliacao {
+    display: flex; 
+    gap: 10px; 
+    margin-left:18% ;
+    margin-top: -10px; 
+} 
 
-p {
-    color: #000;
-    font-weight: bold;
-    font-family: "Montserrat", sans-serif;
-    font-size: 15px;
-}
-
-.div_buttons {
-    display: flex;
-    flex-direction: column;
-    gap: 2vh;
-}
-
-.vizu_amg {
-    border: none;
+button {
+    font-size: 35px;
+    color: white;
+    background-color: #474747;
     cursor: pointer;
-    padding: 6px;
-    border-radius: 10px;
-    background-color: #737373;
-    color: #FFF;
 }
 
-.vizu_amg:hover {
-    background-color: #808080;
-}
-
-.rem_amg {
-    border: none;
-    cursor: pointer;
-    padding: 6px;
-    border-radius: 10px;
-    background-color: #737373;
-    color: #FFF;
-}
-
-.rem_amg:hover {
-    background-color: #808080;
+.likes {
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25;
 }
 
 /* Estilo do botão de menu */
@@ -278,7 +351,23 @@ p {
     z-index: 1000;
     cursor: pointer;
 }
+.adc_remov_button {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1vh;
+    margin-top: 280px;
+    margin-right: 50%;
+    margin-left: 20%;
+}
 
+.adicionar{
+    margin-left: -180%;
+}
+.remover{
+    margin-top: -75%;
+}
 .menu-btn i {
     font-size: 20px;
 }
@@ -407,3 +496,4 @@ p {
         height: 25px;
     }
 }
+
