--- a/rate/rate/src/app/paginas/VizuSugsAtor/vizu_sugs_ator.css
+++ b/rate/rate/src/app/paginas/VizuSugsAtor/vizu_sugs_ator.css
@@ -1,4 +1,3 @@
-/* Configurações gerais */
 * {
     padding: 0;
     margin: 0;
@@ -9,39 +8,195 @@ body {
     background-color: #474747;
 }
 
-/* ---- Bloco de Atores ---- */
-.bloco-atores {
+/* Barra lateral */
+.lateral_bar {
+    position: fixed;
+    top: 0;
+    height: 100%;
+    width: 5%;
+    min-height: 40%;
+    background-color: #52057b;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+}
+
+.nav_botoes_lateral {
+    height: 80%;
+    width: 100%;
+    padding-top: 20%;
+    gap: 40%;
+    display: flex;
+    justify-self: center;
+    align-self: center;
+    flex-direction: column;
+}
+
+.botoes_acima {
+    height: 50%;
+    display: flex;
+    gap: 2%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.botoes {
+    justify-self: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    margin-top: 100%;
+    margin-bottom: -62%;
+}
+
+.ultimo_botao {
+    justify-self: center;
+    align-self: center;
+}
+
+/* Cabeçalho */
+.header{
+    width: 100%;
+    height: 8vh;
+    min-height: 4vh;
+    position: fixed;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    right: 0;
+}
+
+.cor1{
+    background-color: #52057b;
+    height: 7vh;
+    min-height: 70px;
+    width: 23.75%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+.rate {
+    font-family: 'Montserrat', sans-serif;
+    align-items: center;
+    color: aliceblue;
+    font-size: 28px;
+    margin-left: 7%;
+}
+
+.movie  {
+    color: aliceblue;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 12px;
+    margin-left: 12%;
+}        
+
+.cinzacl{
+    background-color: #737373;
+    height: 7vh;
+    min-height: 70px;
+    width: 23.75%;
+    /* position: fixed; */
+}
+
+.cinzaes{
+    background-color: #545454;
+    height: 7vh;
+    min-height: 70px;
+    width: 23.75%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#lupa{
+    width: 80%;
+    margin-left: 6%;
+    margin-right: 14%;
+    font-size: 28px;
+}
+
+
+.preto{
+    background-color: #000000;
+    height: 7vh;
+    min-height: 70px;
+    width: 23.75%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.botoes_perfil {
+    width: 80%;
+    height: 7vh;
+    margin-left: 12%;
+    margin-right: 8%;
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    align-items: center;
+}
+
+.botoes_perfil button {
+    background-color: #000000;
+    border: 0;
+}
+
+.botoes_perfil img {
+    height: 40px;
+    width: 40px;
+}
+
+/* .bloco{
+    background-color: #737373;
+    margin-bottom: 0;
+    height: 15%;
+    width: 15%;
+    min-height: 30%
+  
+
+} */
+
+
+/* Blocos */
+.blocos_filmes {
     padding-top: 122px;
+    padding-left: 10%;
     padding-right: 5%;
     padding-bottom: 3%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 3px;
-    margin-right: 130vh;
+    gap: 3vh ;
 }
 
-.botao-voltar {
-    margin-right: 70px;
-    background-color: transparent;
-    font-size: 45%;
-    color: #fff;
-    position: fixed;
+.seta_voltar {
+    width: 50%;
+    margin-top: -2%;
+    margin-left: -2%;
 }
 
-.botao-retorno {
+.bac-button {
     background-color: transparent;
     border: none;
     color: #fff;
-    font-size: 24px;
+    font-size: 34px;
     cursor: pointer;
+    margin-left: -150%;
+    margin-top: 0;
+
 }
 
-.botao-retorno:hover {
+.bac-button:hover {
     color: #ccc;
 }
 
-.detalhes-ator {
+.movie-details {
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
@@ -52,7 +207,7 @@ body {
     color: white;
 }
 
-.parte1 {
+.parte1{
     width: 27.5%;
     display: flex;
     flex-direction: column;
@@ -62,18 +217,18 @@ body {
     gap: 30px;
 }
 
-.parte2 {
+.parte2{
     width: 27.5%;
     justify-content: center;
     align-content: center;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-top: 50%;
-    margin-left: 100%;
+    margin-top: 5%;
+    margin-left: -80%;
 }
 
-.parte3 {
+.parte3{
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -82,51 +237,54 @@ body {
     align-items: end;
 }
 
-.nome-ator {
-    margin-left: 70px;
-    font-size: 25px;
+.movi-name {
+    margin-left: -90%;
+    font-size: 28px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     margin-bottom: 15px;
-    display: inline;
+
 }
 
-.moldura-cartaz {
+.postera-frame {
     width: 20vw;
     height: 60vh;
     background-color: #5c5c5c;
     border-radius: 10px;
+    margin-left: -90%;
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
-    position: fixed;
-    max-width: 300px;
-    max-height: 450px;
-    margin-left: 10%;
 }
 
-.info-ator {
+.nam{
     padding-bottom: 10px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 18px;
+   
 }
 
-.cartao-usuario {
-    position: fixed;
+.livre {
+    margin-top: 20px;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.use-card {
     display: flex;
     flex-direction: row;
     align-items: center;
     background-color: #A8A8A8; 
-    padding: 15px;
-    margin-left: 35%;
-    margin-bottom: 200%;
-    margin-top: 0%;
+    padding: 15px ;
     width: max-content;
-    border-radius: 25px;
+    border-radius: 25px; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-left: 180%;
 }
 
-.icone-perfil {
+.profile-icon {
     width: 50px;
     height: 50px;
     background-color: #52057b; 
@@ -138,33 +296,184 @@ body {
     font-size: 20px;
     margin-right: 10px; 
 }
+.ok{
+    font-size: 180%;
+}
+.nok{
+    font-size: 180%;
+}
 
-.nome-usuario {
+.username {
     font-size: 16px;
     font-weight: bold;
     color: black; 
 }
 
-.imagem-perfil {
+.perfil {
     width: 25px;
     height: 25px;
 }
 
 .avaliacao {
-    display: flex;
-    gap: 10px;
-    margin-left: 380px;
-    margin-top: 80%;
-}
+    display: flex; 
+    gap: 10px; 
+    margin-left:18% ;
+    margin-top: -10px; 
+} 
 
-.botao-like, .botao-dislike {
+button {
     font-size: 35px;
     color: white;
     background-color: #474747;
     cursor: pointer;
 }
 
-.numero-likes {
+.likes {
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 25;
 }
+
+/* Estilo do botão de menu */
+.menu-btn {
+    display: none;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    background-color: #52057b;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 1000;
+    cursor: pointer;
+}
+
+.menu-btn i {
+    font-size: 20px;
+}
+
+/* Estilo do botão de menu */
+.menu-btn {
+    display: none;
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    background-color: #52057b;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 1000;
+    cursor: pointer;
+}
+
+.menu-btn i {
+    font-size: 20px;
+}
+
+/* Tablet Portrait size to standard 960 (devices and browsers) */
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .rate {
+        font-size: 26px;
+    }.movie {
+        font-size: 10px;
+    }
+    #lupa {
+        font-size: 26px;
+    }
+    .botoes_perfil img {
+        height: 37px;
+        width: 37px;
+    }
+    .botoes {
+        width: 24px;
+        height: 24px;
+    }
+}
+
+/* All Mobile Sizes (devices and browser) */
+@media only screen and (max-width: 767px) {
+    .rate{
+        font-size: 26px;
+    }
+    .movie {
+        font-size: 10px;
+    }
+    #lupa {
+        font-size: 22px;
+    }
+    .botoes_perfil img {
+        height: 34px;
+        width: 34px;
+    }
+    .botoes {
+        width: 24px;
+        height: 24px;
+    }
+}
+
+/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .rate {
+        font-size: 25px;
+    }
+    .movie {
+        font-size: 9px;
+    }
+    #lupa {
+        font-size: 22px;
+    }
+    .botoes_perfil img {
+        height: 31px;
+        width: 31px;
+    }
+    .botoes {
+        width: 18px;
+        height: 18px;
+    }
+}
+
+/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
+@media only screen and (max-width: 479px) {
+    .rate { 
+        font-size: 22px;
+    }
+    .movie {
+        font-size: 8px;
+    }
+    #lupa {
+        font-size: 20px;
+    }
+    .botoes_perfil img {
+        height: 29px;
+        width: 29px;
+    }
+    .botoes {
+        width: 25px;
+        height: 25px;
+    }
+}
+
+@media only screen and (max-width: 405px) {
+    .lateral_bar {
+        display: block;
+    }
+    .rate {
+        font-size: 22px;
+    }
+    .movie {
+        font-size: 8px;
+    }
+    #lupa {
+        font-size: 20px;
+    }
+    .botoes_perfil img {
+        height: 29px;
+        width: 29px;
+    }
+    .botoes {
+        width: 25px;
+        height: 25px;
+    }
+}
+
