--- a/rate/rate/src/app/paginas/VizuSugsFilm/vizu_sugs_filme.css
+++ b/rate/rate/src/app/paginas/VizuSugsFilm/vizu_sugs_filme.css
@@ -164,7 +164,7 @@ body {
 
 
 /* Blocos */
-.blocos_atores {
+.blocos_filmes {
     padding-top: 122px;
     padding-left: 10%;
     padding-right: 5%;
@@ -181,19 +181,22 @@ body {
     margin-left: -2%;
 }
 
-.back-button {
+.backa-button {
     background-color: transparent;
     border: none;
     color: #fff;
-    font-size: 24px;
+    font-size: 34px;
     cursor: pointer;
+    margin-left: -120%;
+    margin-top: 0;
+
 }
 
-.back-button:hover {
+.backa-button:hover {
     color: #ccc;
 }
 
-.actor-details {
+.movie-details {
     width: 80%;
     margin-left: 10%;
     margin-right: 10%;
@@ -221,6 +224,8 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    margin-top: 5%;
+    margin-left: -80%;
 }
 
 .parte3{
@@ -232,19 +237,21 @@ body {
     align-items: end;
 }
 
-.actor-name {
-    margin-left: 5px;
+.movi-name {
+    margin-left: -90%;
     font-size: 28px;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     margin-bottom: 15px;
+
 }
 
-.poster-frame {
+.postera-frame {
     width: 20vw;
     height: 60vh;
     background-color: #5c5c5c;
     border-radius: 10px;
+    margin-left: -90%;
     box-shadow: 0 8px 16px rgba(0,0,0,0.4);
 }
 
@@ -253,53 +260,18 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 18px;
+   
 }
 
-.adc_remov_button {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1vh;
-    margin-top: 50px;
+.livre {
+    margin-top: 20px;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
-.remove_button {
-    width: max-content;
-    background-color: #B60B0D;
-    padding: 10px;
-    border-radius: 15px;
-    border: none;
-    cursor: pointer;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    font-size: 15px;
-    color: #FFF;
-    margin-top: 50%;
-}
-
-.remove_button:hover {
-    background-color: #df1013;
-}
-
-.adc_button {
-    width: max-content;
-    background-color: #52057B;
-    padding: 10px;
-    border-radius: 15px;
-    border: none;
-    cursor: pointer;
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    color: #FFF;
-    font-size: 15px;
-}
-
-.adc_button:hover {
-    background-color: #7e198f
-}
-
-.user-card {
+.use-card {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -309,7 +281,7 @@ body {
     border-radius: 25px; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
     font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    margin-left: 180%;
 }
 
 .profile-icon {
@@ -323,6 +295,12 @@ body {
     border-radius: 50%; 
     font-size: 20px;
     margin-right: 10px; 
+}
+.ok{
+    font-size: 180%;
+}
+.nok{
+    font-size: 180%;
 }
 
 .username {
