--- a/rate/rate/src/app/paginas/AdcAtor/adcAtor.module.css
+++ b/rate/rate/src/app/paginas/AdcAtor/adcAtor.module.css
@@ -1,26 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.cards body {
-    font-family: Arial, sans-serif;
-    background-color: #2C2C2C;
-    color: white;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-   
-}
-
 .cards {
-
+    margin-top: -5%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
+
 
 .back-button {
     background-color: transparent;
@@ -29,45 +14,40 @@
     font-size: 35px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 20px;           
+    left: 20px; 
 }
 
 .back-button:hover {
     color: #ccc;
 }
 
-
-
-:root .container {
-    
-    background-color: #2C2C2C;
-    display: flex;
-    justify-content: center; 
-    align-items: center;     
-    height: 100vh;           
-    margin: 0;
+.container {
+    height: max-content;
+    width: 35% ;
     background-color: #3f3e3e;
     padding: 20px;
     border-radius: 15px;
-    height: max-content;
     margin-bottom: 40px;
-    width: 90%; 
+    margin-left: 32.5%;
+    margin-right: 32.5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-    
-  
-  }
-  
-h2 {
+}
+
+.h2 {
     margin-bottom: 20px;
     letter-spacing: 1.5px;
 }
 
 .form-container {
     height: 90%;
-    width: 90% ;
+    width: 90%;
 }
 
 .ator-image {
@@ -80,7 +60,7 @@ h2 {
     border-radius: 10px;
 }
 
-form {
+.atorForm {
     width: 100%;
 }
 
@@ -100,7 +80,9 @@ input {
     color: white;
 }
 
+
 button {
+    /* padding: 10px 20px; */
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -108,11 +90,11 @@ button {
     color: white;
 }
 
-button#cancela {
+button.cance {
     background-color: #52057B;
 }
 
-.img_classificacao {
+.img_classificacao{
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
@@ -125,43 +107,89 @@ button#cancela {
     align-items: center;
 }
 
-.ícone1,
-.ícone2,
-.ícone3,
-.ícone4,
-.ícone5,
-.ícone6 {
+.ícone1{
     width: 90%;
     height: 90%;
     max-width: 30px;
     max-height: 30px;
     object-fit: cover;
     border-radius: 10px;
-    margin-left: 10px;
+
 }
 
-.buto {
+.ícone2{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone3{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone4{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone5{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.ícone6{
+    width: 90%;
+    height: 90%;
+    margin-left: 10px;
+    max-width: 30px;
+    max-height: 30px;
+    object-fit: cover;
+    border-radius: 10px;
+} 
+
+.buto{
     background-color: #3f3e3e;
 }
 
-#addd {
+.add{
     padding: 3%;
     margin: 2%;
     font-size: 85%;
     background-color: #52057B;
 }
 
-#cancela {
-    padding: 19.5%;
+.cance{
+    padding: 3.5%;
     font-size: 85%;
     background-color: #52057B;
+    
 }
 
-#cancela:hover {
+.cance:hover {
     background-color: #7e198f;
 }
 
-#addd:hover {
+.add:hover {
     background-color: #7e198f;
 }
 
